src/test/ui/deprecation/deprecation-in-staged-api.stderr
error: `#[deprecated]` cannot be used in staged api, use `#[rustc_deprecated]` instead
  --> $DIR/deprecation-in-staged-api.rs:8:1
   |
LL | fn main() { } //~ERROR `#[deprecated]` cannot be used in staged api
   | ^^^^^^^^^^^^^

error: aborting due to previous error

